[tool.poetry]
name = "docker-upgrade-check"
version = "0.1.0"
description = "Script to check if your docker image needs an upgrade"
authors = ["Christian Wahl <709679@googlemail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docker_upgrade_check"}]

[tool.poetry.dependencies]
python = ">= 3.10, < 4.0.0"
requests = "^2.31.0"
semver = "^3.0.0"
todoist-api-python = "^2.0.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
